Fix minor height misalignment on feature cards

--- a/src/components/Main/Features/Feature/feature.module.scss
+++ b/src/components/Main/Features/Feature/feature.module.scss
@@ -13,7 +13,7 @@
 
   @include respond(tab-land) {
     font-size: 1.7rem;
-    min-height: 34.5rem;
+    min-height: 34.7rem;
   }
 
   @include respond(tab-port-large) {
